test/js/node/test/parallel/test-stream-consumers.js.log.txt
NOTE: The test started as a child_process using these flags: [ '--no-warnings' ] Use NODE_SKIP_FLAG_CHECK to run the test with the original flags.
26 |   buf.buffer.slice(buf.byteOffset, buf.byteOffset + buf.byteLength);
27 | 
28 | {
29 |   const passthrough = new PassThrough();
30 | 
31 |   blob(passthrough).then(common.mustCall(async (blob) => {
               ^
TypeError: undefined is not a function
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-consumers.js:31:3
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
      at promiseReactionJob (1:11)

Bun v1.1.34-debug+b186f0ba7 (macOS arm64)
